--- a/app/templates/sidebar.html
+++ b/app/templates/sidebar.html
@@ -2,8 +2,16 @@
           <div class="sidebar-module sidebar-module-inset">
             <h4>About</h4>
             <p>
-            author: walter.liu<br/>
-            email: walter.liu@yeahmobi.com
+            <address>
+            <strong>Yeahmobi, Inc.</strong><br>
+            walter.liu<br>
+            <abbr title="QQ">Q:</abbr>570962906
+          </address>
+
+          <address>
+            <strong>Email</strong><br>
+            <a href="mailto:#">dui_zhang@163.com</a>
+          </address>
             </p>
           </div>
           <div class="sidebar-module">
