--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,8 +1,9 @@
 {% extends 'base.html' %}
 {% import "bootstrap/wtf.html" as wtf %}
-{% block title%}test web{% endblock%}
+
 
 {% block page_content %}
+<div class="row">
 	<div class="page-header">
 	<h1>Login</h1>
 	</div>
@@ -16,4 +17,5 @@
 	Click here to register
 	</a>
 	</p>
+</div>
 {% endblock %}
