--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,7 +4,7 @@
     <link rel="shortcut icon" href="{{ url_for('static', filename = 'favicon.ico') }}" type="image/x-icon">
     <link rel="icon" href="{{ url_for('static', filename = 'favicon.ico') }}" type="image/x-icon">
 {% endblock %}
-{% block title %}test web{% endblock %}
+{% block title %}Walter's Blog--Python,PHP,Linux,Docker,OpenStack,Shell{% endblock %}
 {% block navbar %}
 <div class="navbar navbar-default" role="navigation">
     <div class="container">
@@ -29,7 +29,7 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li class='active'><a href="{{ url_for('main.index') }}">Home</a></li>
-                <li><a href="/">Test</a></li>
+            
             </ul>
         </div>
     </div>
@@ -45,6 +45,18 @@
         {% endfor %}
 
         {% block page_content %}{% endblock %}
+
+     <hr>
+
+        <!-- Footer -->
+        <footer>
+            <div class="row">
+                <div class="col-lg-12">
+                    <p>Copyright &copy; Your Website 2016</p>
+                </div>
+            </div>
+            <!-- /.row -->
+        </footer>
     </div>
 
 {% endblock %}
