--- a/app/templates/edit.html
+++ b/app/templates/edit.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% import "bootstrap/wtf.html" as wtf %}
-{% block title%}test web{% endblock%}
+
 
 {% block page_content %}
 <div class="row">
@@ -22,7 +22,7 @@
 	    </div>
 	    {{ form.content.label(class="control-label") }}
 	    <div class='form-group required'>
-	   	{{ form.content(required=True,cols=50, rows=20, class='form-control') }}
+	   	{{ form.content(required=True,cols=50, rows=20, class='form-control',style="width:800px;") }}
 	    </div>
 	    {{ form.submit(class="btn btn-primary") }}
 		</form>
