--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -29,7 +29,7 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li class='active'><a href="{{ url_for('main.index') }}">Home</a></li>
-            
+                 <li><a href="{{ url_for('docker.show_containers') }}">Docker</a></li>
             </ul>
         </div>
     </div>
