add simple websocket

--- a/app/templates/docker/show_containers.html
+++ b/app/templates/docker/show_containers.html
@@ -13,6 +13,7 @@
 	</div>
 	
 	<div class="pull-right" style="margin:0px 0px 10px 0px;"><a href="{{url_for('.create_container')}}" class="btn btn-primary " role="button">New Container</a></div>
+	<div class="pull-right" style="margin:0px 20px 10px 20px;"><a href="{{url_for('.pull')}}" class="btn btn-primary " role="button">pull Images</a></div>
 
 	<table class="table table-hover">
 	 <tr>
